--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,16 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    ext.versions = [
+            /* Android config. */
+            compileSdk   : 29, // SDK 编译版本
+            minSdk       : 18, // 最小 SDK 版本
+            instantMinSdk: 21, // Instant Run 的最小 SDK 版本
+            targetSdk    : 29, // 目标 SDK 版本
+            versionCode  : 16, // 版本号由版本名映射，主版本号 * 10000 + 子版本号 * 100 + 修正版本号，例如 1.2.10 -> 10210
+            versionName  : 'V1.1.5', // 版本名采用 GNU 风格，主版本号.s子版本号.修正版本号，例如 1.2.10
+    ]
+
     repositories {
         jcenter()
         maven {
@@ -10,7 +20,7 @@ buildscript {
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.3'
+        classpath 'com.android.tools.build:gradle:3.5.3'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
